construct test for creating a contract for a client, i will add the logic behind updating a cost and i will add mockmvc tests then i will update my readme